# p2poolv2

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.adoc  changes.diff  codecov.yml  config-docker.sample.toml  config-hydrapool-signet.toml  config-testnet4.toml  config.1.toml  config.2.toml  config.sample.toml  config.toml  dist-workspace.toml  justfile  p2poolv2.service  p2poolv2@.service  rustfmt.toml
bitcoindrpc/: Cargo.toml  README.adoc
bitcoindrpc/src/: lib.rs  test_utils.rs
p2poolv2_accounting/: Cargo.toml  README.adoc
p2poolv2_accounting/src/: calc.rs  lib.rs  simple_pplns.rs  test_utils.rs  user.rs  worker.rs
p2poolv2_accounting/src/simple_pplns/: payout.rs
p2poolv2_accounting/src/stats/: computed.rs  metrics.rs  mod.rs  pool_local_stats.rs  user.rs  user_stats.rs  worker.rs
p2poolv2_api/: Cargo.toml  README.md
p2poolv2_api/src/: lib.rs  main.rs
p2poolv2_api/src/api/: auth.rs  error.rs  mod.rs  rate_limiter.rs  server.rs  websocket.rs
p2poolv2_api/src/api/endpoints/: candidates.rs  chain_info.rs  common.rs  dag.rs  mod.rs  share.rs  share_headers.rs  shares.rs  transaction.rs
p2poolv2_api/static/: dashboard.html  dashboard.js
p2poolv2_bin/: Cargo.toml
p2poolv2_bin/src/: main.rs
p2poolv2_cli/: Cargo.toml  README.md
p2poolv2_cli/src/: lib.rs  main.rs
p2poolv2_cli/src/commands/: api_client.rs  blocked_ips.rs  candidates.rs  chain_info.rs  dag.rs  db.rs  db_query.rs  gen_auth.rs  gen_genesis.rs  mod.rs  peers.rs  peers_info.rs  pplns_shares.rs  restart_bitcoind.rs  share.rs  share_headers.rs  shares.rs  transactions.rs
p2poolv2_config/: Cargo.toml
p2poolv2_config/src/: lib.rs
p2poolv2_lib/: Cargo.toml
p2poolv2_lib/benches/: README.adoc  pplns_window.rs  sum_u64.rs
p2poolv2_lib/src/: auth.rs  cache.rs  config.rs  lib.rs  logging.rs  monitoring_events.rs  pool_difficulty.rs  sim_overrides.rs  test_utils.rs  user.rs
p2poolv2_lib/src/accounting/: calc.rs  mod.rs
p2poolv2_lib/src/accounting/payout/: mod.rs  payout_distribution.rs
p2poolv2_lib/src/accounting/simple_pplns/: mod.rs  payout.rs
p2poolv2_lib/src/accounting/stats/: computed.rs  metrics.rs  mod.rs  pool_local_stats.rs  prom.rs  user.rs  user_stats.rs  worker.rs
p2poolv2_lib/src/api/: handlers.rs  mod.rs  models.rs  server.rs  tests.rs
p2poolv2_lib/src/cli_commands/: candidates_info.rs  chain_info.rs  info.rs  mod.rs  pplns_shares.rs  share_lookup.rs  shares_info.rs
p2poolv2_lib/src/command/: mod.rs
p2poolv2_lib/src/middleware/: inactivity.rs  mod.rs
p2poolv2_lib/src/node/: actor.rs  address_filter.rs  bip152.rs  compact_block_relay.rs  connection_tracker.rs  emission_worker.rs  gossip_handler.rs  messages.rs  mod.rs  organise_worker.rs  peer_reconnector.rs  rate_limiter.rs  request_response_handler.rs  request_sender.rs  storage_worker.rs  validation_worker.rs
p2poolv2_lib/src/node/behaviour/: mod.rs  request_response.rs
p2poolv2_lib/src/node/block_fetcher/: mod.rs  peer_selector.rs
p2poolv2_lib/src/node/layers/: mod.rs  rate_limit_layer.rs
p2poolv2_lib/src/node/p2p_message_handlers/: mod.rs
p2poolv2_lib/src/node/request_response_handler/: mod.rs  peer_block_knowledge.rs
p2poolv2_lib/src/service/: mod.rs  p2p_service.rs  peer_state.rs
p2poolv2_lib/src/shares/: ckpool_socket.rs  coinbaseaux_flags.rs  compact_block.rs  extranonce.rs  genesis.rs  handle_mining_message.rs  handle_stratum_share.rs  handle_stratum_shares.rs  mod.rs  receive_mining_message.rs  share_block.rs  share_commitment.rs  share_utils.rs  witness_commitment.rs
p2poolv2_lib/src/shares/accounting/: mod.rs  simple_pplns.rs
p2poolv2_lib/src/shares/chain/: actor.rs  chain.rs  chain_store.rs  chain_store_handle.rs  mod.rs
p2poolv2_lib/src/shares/genesis/: main.rs  mod.rs  regtest.rs  signet.rs  testnet4.rs
p2poolv2_lib/src/shares/miner_message/: builders.rs  mod.rs
p2poolv2_lib/src/shares/share_block/: mod.rs  share_coinbase.rs  share_transaction.rs  short_ids.rs  storage_share_block.rs
p2poolv2_lib/src/shares/store/: mod.rs
p2poolv2_lib/src/shares/transactions/: coinbase.rs  mod.rs
p2poolv2_lib/src/shares/validation/: bitcoin_block_validation.rs  mod.rs
p2poolv2_lib/src/sim/: blockfind.rs  emitter.rs  mod.rs  share.rs  timing.rs
p2poolv2_lib/src/stats/: metrics.rs  mod.rs  pool_local_stats.rs  pool_stats.rs  user_stats.rs
p2poolv2_lib/src/store/: background_tasks.rs  block_tx_metadata.rs  column_families.rs  dag_store.rs  job_store.rs  mod.rs  organise.rs  pplns_shares.rs  prune_shares.rs  share_store.rs  stored_user.rs  transaction_store.rs  user.rs  user_and_worker.rs
p2poolv2_lib/src/store/organise/: candidate.rs  confirmed.rs  mod.rs  organise_block.rs  organise_header.rs  organise_share.rs
p2poolv2_lib/src/store/writer/: handle.rs  mod.rs
p2poolv2_lib/src/stratum/: blocknotify_receiver.rs  client_connections.rs  emission.rs  error.rs  messages.rs  mod.rs  parse_password.rs  server.rs  session.rs  session_timeout.rs  share_block.rs  timeout.rs  util.rs  validate_username.rs  zmq_listener.rs
p2poolv2_lib/src/stratum/difficulty_adjuster/: mod.rs
p2poolv2_lib/src/stratum/message_handlers/: authorize.rs  authorize_response.rs  (+6 more)
p2poolv2_lib/src/utils/: cpu.rs  mod.rs  short_hex.rs  snowflake_simplified.rs  time_provider.rs
p2poolv2_node/: Cargo.toml  dist.toml
p2poolv2_node/src/: background_tasks.rs  bitcoin_node.rs  cli_main.rs  lib.rs  main.rs  preflight.rs  signal.rs  verify_chain.rs
p2poolv2_sim/: Cargo.toml  build.rs
p2poolv2_sim/src/: config.rs  main.rs
p2poolv2_tests/: Cargo.toml
p2poolv2_tests/src/: lib.rs  node_swarm_test.rs  node_swarm_wait.rs  stratum_server_test.rs  test_api_server_health_check.rs
p2poolv2_tests/src/common/: mod.rs
p2poolv2_tests/test_data/: peer_shares_and_workbases.json  shares_only.json  workbases_only.json
p2poolv2_tests/test_data/seralized/: block_1.txt
p2poolv2_tests/test_data/share_sync/: share_blocks.json  share_headers.json
p2poolv2_tests/test_data/validation/: share_headers.json  shares.json  userworkbases.json  workbases.json
(+339 files in other folders)
