[workspace]
members = [
    "bitcoindrpc",
    "p2poolv2_config",
    "p2poolv2_lib",
    "p2poolv2_node",
    "p2poolv2_cli",
    "p2poolv2_api",
    "p2poolv2_tests",
    "p2poolv2_sim",
]
resolver = "2"

[workspace.package]
version = "0.12.0"
edition = "2024"
authors = ["Kulpreet Singh<kp@opdup.com>"]
license = "AGPL-3.0-or-later"
description = "Peer to peer mining pool for bitcoin"
readme = "README.adoc"
homepage = "https://github.com/p2poolv2/p2poolv2"
repository = "https://github.com/p2poolv2/p2poolv2"
keywords = ["bitcoin", "mining", "pool", "p2p"]
categories = ["cryptography::cryptocurrencies"]
exclude=["tests"]
rust-version = "1.88"
publish = false

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[profile.bench]
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[workspace.dependencies]
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "tokio",
    "noise",
    "yamux",
    "identify",
    "macros",
    "kad",
    "ping",
    "secp256k1",
    "request-response",
] }
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "signal", "macros"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2.3" }
config = { version = "0.13", default-features = false, features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
hmac = "0.12"
sha2 = "0.10"
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
async-trait = "0.1.83"
thiserror = "2.0.8"
serde_json = "1.0.135"
rust_decimal = { version = "1.36.0", features = [
    "serde",
    "serde-with-arbitrary-precision",
] }
rust_decimal_macros = "1.36.0"
zmq = "0.10"
bitcoin = { version = "0.32.5", features = ["serde", "rand"] }
bitcoinconsensus = { version = "0.106.0" }
base64 = "0.22.1"
void = "1.0.2"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tokio-stream = "0.1.17"
bitcoindrpc = { path = "bitcoindrpc" }
p2poolv2_config = { path = "p2poolv2_config" }
p2poolv2_api = { path = "p2poolv2_api" }
p2poolv2_lib = { path = "p2poolv2_lib", features = ["test-utils"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "default-tls"] }
mockall = "0.13.1"
mockall_double = "0.3.1"
tempfile = "3.15.0"
tokio-test = "0.4.3"
wiremock = "0.6.2"
dashmap = "6"
uint = "0.9"
criterion = { version = "0.5", features = ["html_reports"] }
