[package]
name = "bitcoindrpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
bitcoin.workspace = true
reqwest = { version = "0.12", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
mockall = { version = "0.13.1", optional = true }
hex.workspace = true
wiremock = { version = "0.6.2", optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
mockall = "0.13.1"
wiremock = "0.6.2"

[features]
test-utils = ["wiremock"]
