[package]
name = "bitcoindrpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme = "README.adoc"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64.workspace = true
bitcoin.workspace = true
hex.workspace = true
mockall = { version = "0.13.1", optional = true }
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wiremock = { workspace = true, optional = true }

[dev-dependencies]
mockall = "0.13.1"
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
wiremock = { workspace = true }

[features]
test-utils = ["wiremock"]
