[package]
name = "p2poolv2_accounting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }
bitcoin = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.15.0"
test-log = { version = "0.2.17", features = ["trace"] }
