[package]
name = "p2poolv2_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
p2poolv2_lib = { workspace = true }
axum = "0.7"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[lib]
name = "p2poolv2_api"
path = "src/lib.rs"