[package]
name = "p2poolv2_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
p2poolv2_lib = { workspace = true }
bitcoin = { workspace = true }
axum = "0.7"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { workspace = true }
serde_json = "1"
chrono = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lib]
name = "p2poolv2_api"
path = "src/lib.rs"
