[package]
name = "p2poolv2_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
p2poolv2_lib = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rpassword = "7.3"


[[bin]]
name = "p2poolv2_cli"
path = "src/main.rs"
