[package]
name = "p2poolv2_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
name = "p2poolv2_cli"
path = "src/lib.rs"

[dependencies]
p2poolv2_lib = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
rand = "0.8"
hex = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rpassword = "7.3"
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
wiremock = "0.6.2"
tokio = { version = "1.0", features = ["full", "test-util"] }

[[bin]]
name = "p2poolv2_cli"
path = "src/main.rs"
