[package]
name = "p2poolv2_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true }
bitcoindrpc = { path = "../bitcoindrpc" }
chrono = { workspace = true }
config = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
rand = { version = "0.8", optional = true }
rocksdb = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { version = "0.5", features = ["limit", "util"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
void = { workspace = true }
zmq = { workspace = true }

[dev-dependencies]
bitcoindrpc = { path = "../bitcoindrpc", features = ["test-utils"] }
mockall.workspace = true
mockall_double.workspace = true
temp-env = "0.3.6"
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-test.workspace = true
wiremock = "0.6.2"

[features]
test-utils = ["bitcoindrpc/test-utils", "dep:rand", "dep:tempfile"]
