[package]
name = "p2poolv2_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
test-utils = [
    "p2poolv2_config/test-utils",
    "bitcoindrpc/test-utils",
    "dep:rand",
    "dep:tempfile"
]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bitcoin = { workspace = true }
bitcoinconsensus = { workspace = true }
bitcoindrpc = { path = "../bitcoindrpc" }
chrono = { workspace = true }
config = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
libp2p = { workspace = true }
p2poolv2_config = { path = "../p2poolv2_config" }
rand = { version = "0.8", optional = true }
rocksdb = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tower = { version = "0.5", features = ["limit", "util"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uint = { workspace = true }
void = { workspace = true }
zmq = { workspace = true }

[dev-dependencies]
bitcoindrpc = { path = "../bitcoindrpc", features = ["test-utils"] }
criterion.workspace = true
mockall.workspace = true
mockall_double.workspace = true
p2poolv2_config = { path = "../p2poolv2_config", features = ["test-utils"] }
rand = "0.8"
temp-env = "0.3.6"
tempfile.workspace = true
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-test.workspace = true
wiremock = "0.6.2"
