[package]
name = "p2poolv2_node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
bitcoin = { workspace = true }
bitcoindrpc = { workspace = true }
p2poolv2_api = { workspace = true }
p2poolv2_lib = { workspace = true }

[[bin]]
name = "p2poolv2"
path = "src/main.rs"

[dev-dependencies]
p2poolv2_lib = { workspace = true, features = ["test-utils"] }
mockall = "0.13.1"
mockall_double = "0.3.1"
