[package]
name = "p2poolv2_node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
default-run = "p2poolv2"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
bitcoin = { workspace = true }
bitcoindrpc = { workspace = true }
p2poolv2_api = { workspace = true }
p2poolv2_cli = { path = "../p2poolv2_cli" }
p2poolv2_lib = { workspace = true }

[[bin]]
name = "p2poolv2"
path = "src/main.rs"

[[bin]]
name = "p2poolv2_cli"
path = "src/cli_main.rs"

[dev-dependencies]
p2poolv2_lib = { workspace = true, features = ["test-utils"] }
mockall.workspace = true
mockall_double.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
wiremock = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
