[package]
name = "p2poolv2_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dev-dependencies]
p2poolv2_lib = { workspace = true, features = ["test-utils"] }
p2poolv2_api = { workspace = true }
mockall.workspace = true
mockall_double.workspace = true
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
zmq = { workspace = true }
tracing = { workspace = true }
libp2p = { workspace = true, features = [
        "tcp",
        "dns",
        "tokio",
        "noise",
        "yamux",
        "identify",
        "macros",
        "kad",
        "secp256k1",
        "request-response",
] }
reqwest = { workspace = true, features = ["json", "blocking"] }
bitcoindrpc = { workspace = true, features = ["test-utils"] }
chrono.workspace = true
